--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>404 NOT FOUND</title>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <style>
   body {
     background-color: #EFEFEF;
@@ -50,9 +51,8 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>你找的页面没有找到哦。</h1>
+    <p>可能你访问的地址不对或者页面被删除了。</p>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
 </body>
 </html>
