--- a/public/422.html
+++ b/public/422.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The change you wanted was rejected (422)</title>
+  <title>422 REJECTED</title>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
   <style>
   body {
     background-color: #EFEFEF;
@@ -50,9 +51,8 @@
 <body>
   <!-- This file lives in public/422.html -->
   <div class="dialog">
-    <h1>The change you wanted was rejected.</h1>
-    <p>Maybe you tried to change something you didn't have access to.</p>
+    <h1>你的请求被拒绝。</h1>
+    <p>可能你没有权限这样做。</p>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
 </body>
 </html>
