--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>500 ERROR</title>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
   <style>
   body {
     background-color: #EFEFEF;
@@ -50,8 +51,7 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <h1>抱歉，服务出错啦。</h1>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
 </body>
 </html>
